--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -2,6 +2,10 @@
 .newsFeed{
     margin-top: 3rem;
 }
+.InfiniteScroll{
+    min-height:100vh;
+    max-height: 100%;
+}
 .card{
     /* align-items: center; */
     display: flex;
@@ -40,27 +44,14 @@
 }
 
 .actionButtons {
+    display: flex;
     margin-top: 1rem;
 }
 
-.likeButton,
-.shareButton {
-    padding: 0.5rem 1rem;
-    margin-right: 0.5rem;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.likeButton:hover,
-.shareButton:hover {
-    background-color: #0056b3;
-}
-
 .icon{
-    cursor: pointer;
+    display: flex;
+    /* cursor: pointer; */
     margin-right: 1rem;
 }
+
 
