--- a/styles/User.module.css
+++ b/styles/User.module.css
@@ -1,7 +1,10 @@
 .userDetail {
     padding-top: 5rem;
 }
-
+.userPage{
+    min-height:100vh;
+    max-height: 100%;
+}
 .userDetails {
     display: flex;
     margin-left: 20%;
@@ -70,8 +73,8 @@
 
 .photoGrid .imgDescription {
     display: flex;
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    /* height: 100%; */
     margin: 4px;
     padding: 4px;
 
@@ -139,7 +142,7 @@
 @media (max-width: 767px) {
 
     .userDetail {
-        margin: 50px 0px;
+        margin: 0px 0px;
     }
 
     .userDetails {
@@ -195,8 +198,7 @@
 
     .imgDescription {
         font-size: small;
+        color: #ccc;
     }
-
-
 
 }
